[gd_scene load_steps=3 format=3 uid="uid://gdfoewe3hhy3"]

[ext_resource type="Script" path="res://Scenes/Levels/levels.gd" id="1_0dagg"]
[ext_resource type="Texture2D" uid="uid://dxrypusta8p08" path="res://Scenes/Death/static_bg.png" id="1_0g45w"]

[node name="Levels" type="CanvasLayer"]
script = ExtResource("1_0dagg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(288, 325)
texture = ExtResource("1_0g45w")

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D"]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -488.0
offset_top = -495.5
offset_right = -88.0
offset_bottom = -152.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="header" type="PanelContainer" parent="Sprite2D/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="Sprite2D/VBoxContainer/header"]
layout_mode = 2
bbcode_enabled = true
text = "[center]
[color=#ff00ff][font_size=24]MAGNETIC RESCUE[/font_size][/color]
Select your difficulty level

[center]"
fit_content = true

[node name="middle" type="PanelContainer" parent="Sprite2D/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/VBoxContainer/middle"]
layout_mode = 2

[node name="bottom" type="PanelContainer" parent="Sprite2D/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Sprite2D/VBoxContainer/bottom"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/VBoxContainer/bottom/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Easy" type="Button" parent="Sprite2D/VBoxContainer/bottom/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Easy"

[node name="Middle" type="Button" parent="Sprite2D/VBoxContainer/bottom/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Middle
"

[node name="Hard" type="Button" parent="Sprite2D/VBoxContainer/bottom/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Hard"

[connection signal="pressed" from="Sprite2D/VBoxContainer/bottom/CenterContainer/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="Sprite2D/VBoxContainer/bottom/CenterContainer/VBoxContainer/Middle" to="." method="_on_middle_pressed"]
[connection signal="pressed" from="Sprite2D/VBoxContainer/bottom/CenterContainer/VBoxContainer/Hard" to="." method="_on_hard_pressed"]
